fixed some styling issues on mobile

--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -22,6 +22,13 @@
   border-collapse: collapse;
   background-color: #fff;
 
+  // Style when on mobile 
+  @media only screen and (max-width: 640px) {
+    .cart-items-table__header {
+      display: none;
+    }
+  }
+
   th,
   td {
     padding: 15px 30px;
