--- a/src/components/Cart/CartItem.scss
+++ b/src/components/Cart/CartItem.scss
@@ -32,4 +32,10 @@
     border-color: var(--border-color);
     padding: 5px;
   }
+
+  @media only screen and (max-width: 640px) {
+    .cart-item__total {
+      display: none;
+    }
+  }
 }
