--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -2,7 +2,7 @@
   background-color: #fff;
   max-width: 1080px;
   margin: 0 auto;
-  margin-bottom: 40px;
+  padding-bottom: 40px;
 
   .product-list__header {
     font-size: 3em;
